fix: fix alignments in style sheet
Removed the old width and introduced further alignments details to button on the first column.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul{
 .left-content{
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 450px;
     gap: 10px;
 }
 
@@ -80,6 +80,9 @@ button{
     text-align: center;
     color: #E5E7EB;
     border-radius: 5px;
+    border-style: none;
+    font-weight: bold;
+    padding: 10px;
     width: 100px;
 }
 
